<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/signin_up"
    >
    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/icon_sign_up_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:text="{fa-times}"
        android:textSize="30dp"
        android:textColor="@color/app_gray_02"
        />


    <!--兼容小屏幕手机采用滚动View-->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingLeft="21dp"
            android:paddingRight="21dp"
           >

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="21dp"
                android:src="@mipmap/logo_round_corner" />

            <!--姓名-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/app_gray_01"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:textSize="15sp"
                    android:background="@color/app_gray_02_50"
                    tools:ignore="HardcodedText"

                    />
            </android.support.design.widget.TextInputLayout>

            <!--密码-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/app_gray_01"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="15sp"
                    android:background="@color/app_gray_02_50"
                    tools:ignore="HardcodedText" />
            </android.support.design.widget.TextInputLayout>

            <!--重复密码-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_re_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/app_gray_01"
                    android:hint="@string/re_password"
                    android:inputType="textPassword"
                    android:textSize="15sp"
                    android:background="@color/app_gray_02_50"
                    tools:ignore="HardcodedText" />
            </android.support.design.widget.TextInputLayout>

            <!--手机号码-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_phone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/app_gray_01"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textSize="15sp"
                    android:background="@color/app_gray_02_50"
                    tools:ignore="HardcodedText" />
            </android.support.design.widget.TextInputLayout>

            <!--邮箱-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/app_gray_01"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    android:background="@color/app_gray_02_50"
                    tools:ignore="HardcodedText" />
            </android.support.design.widget.TextInputLayout>

            <!--密码提示问题-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_problem"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/app_gray_01"
                    android:hint="@string/problem"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:background="@color/app_gray_02_50"
                    tools:ignore="HardcodedText" />
            </android.support.design.widget.TextInputLayout>

            <!--密码提示问题-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_answer"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/app_gray_01"
                    android:hint="@string/answer"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:background="@color/app_gray_02_50"
                    tools:ignore="HardcodedText" />
            </android.support.design.widget.TextInputLayout>




            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="21dp"
                android:layout_marginTop="21dp"
                android:background="@color/app_ui_50"
                android:gravity="center"
                android:padding="12dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                tools:ignore="HardcodedText"

                />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_link_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="21dp"
                android:layout_marginRight="10dp"
                android:gravity="center|right"
                android:text="@string/sign_up_already"
                android:textSize="13sp"
                tools:ignore="HardcodedText"
                android:textColor="@color/app_gray_01"
                />

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>
</android.support.v7.widget.LinearLayoutCompat>